First commit of Fluxis

--- a/.gitignore
+++ b/.gitignore
@@ -396,3 +396,28 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+
+
+# Terraform state files
+*.tfstate
+*.tfstate.*
+
+# Terraform crash logs
+crash.log
+
+# Terraform plan files
+*.tfplan
+
+# Terraform provider plugins and local cache
+.terraform/
+.terraform.lock.hcl
+
+# Terraform backup files
+*.backup
+
+# Terraform variable files (if sensitive)
+*.tfvars
+!terraform.tfvars.example  # Keep an example file for reference
+
+# Ignore data-example.json file
+data-example.json
