--- a/microservice-1/Dockerfile
+++ b/microservice-1/Dockerfile
@@ -5,15 +5,18 @@ RUN useradd -m appuser
 
 WORKDIR /app
 
-COPY requirements.txt requirements.txt
-RUN pip install --no-cache-dir -r requirements.txt
-
-COPY . .
-
-# Change ownership to the non-root user
+# Ensure appuser owns the /app directory
 RUN chown -R appuser:appuser /app
 
-# Switch to the non-root user
+COPY requirements.txt requirements.txt
+COPY requirements-test.txt requirements-test.txt
+
+# Switch to non-root user
 USER appuser
+
+RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r requirements-test.txt
+
+COPY . .
 
 CMD ["python", "app.py"]
