--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -23,11 +23,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r ./microservice-1/requirements.txt
-          pip install -r ./microservice-1/requirements-test.txt
 
       - name: Run unit tests
         run: |
-          python -m unittest discover ./microservice-1/tests | tee test-results-microservice-1.log
+          python -m unittest discover ./microservice-1/tests > test-results-microservice-1.log 2>&1
 
       - name: Upload test results
         if: always()
@@ -81,11 +80,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r ./microservice-2/requirements.txt
-          pip install -r ./microservice-2/requirements-test.txt
 
       - name: Run unit tests
         run: |
-          python -m unittest discover ./microservice-2/tests | tee test-results-microservice-2.log
+          python -m unittest discover ./microservice-2/tests > test-results-microservice-2.log 2>&1
 
       - name: Upload test results
         if: always()
