--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -26,7 +26,8 @@ jobs:
 
       - name: Run unit tests
         run: |
-          python3 -m unittest discover -s ./microservice-1/tests -p "*.py" > test-results-microservice-1.log 2>&1
+          set -o pipefail
+          python3 -m unittest discover -s ./microservice-1/tests -p "*.py" 2>&1 | tee test-results-microservice-1.log
 
       - name: Upload test results
         if: always()
@@ -83,7 +84,8 @@ jobs:
 
       - name: Run unit tests
         run: |
-          python3 -m unittest discover -s ./microservice-2/tests -p "*.py" > test-results-microservice-2.log 2>&1
+          set -o pipefail
+          python3 -m unittest discover -s ./microservice-2/tests -p "*.py" 2>&1 | tee test-results-microservice-2.log
 
       - name: Upload test results
         if: always()
