--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -53,6 +53,10 @@ jobs:
           unzip terraform_1.5.0_linux_amd64.zip
           sudo mv terraform /usr/local/bin/
 
+      - name: Initialize Terraform
+        run: |
+          terraform -chdir=./infrastructure/terraform init
+          
       - name: Get Terraform Outputs
         id: tf-outputs
         run: |
@@ -111,6 +115,10 @@ jobs:
           unzip terraform_1.5.0_linux_amd64.zip
           sudo mv terraform /usr/local/bin/
 
+      - name: Initialize Terraform
+        run: |
+          terraform -chdir=./infrastructure/terraform init
+          
       - name: Get Terraform Outputs
         id: tf-outputs
         run: |
