--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -196,6 +196,10 @@ jobs:
         run: |
           terraform -chdir=./infrastructure/terraform init
 
+      - name: List Terraform Outputs
+        run: |
+          terraform -chdir=./infrastructure/terraform output
+
       - name: Get Terraform Outputs
         id: tf-outputs
         run: |
@@ -242,6 +246,10 @@ jobs:
       - name: Initialize Terraform
         run: |
           terraform -chdir=./infrastructure/terraform init
+
+      - name: List Terraform Outputs
+        run: |
+          terraform -chdir=./infrastructure/terraform output
 
       - name: Get Terraform Outputs
         id: tf-outputs
