--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -166,7 +166,7 @@ jobs:
     needs: build-microservice-1
     steps:
       - name: Print Working Directory
-        run: pwd && ls -l
+        run: pwd && ls -l */*/
         
       - name: Set up AWS CLI
         uses: aws-actions/configure-aws-credentials@v2
