--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -165,6 +165,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-microservice-1
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - name: Print Working Directory
         run: pwd && ls -l
         
@@ -210,7 +213,6 @@ jobs:
           echo "ECS_CLUSTER_ID=$ECS_CLUSTER_ID" >> $GITHUB_ENV
 
       - name: Verify ECS Service
-        working-directory: ./fluxis
         run: |
           SERVICE_EXISTS=$(aws ecs describe-services --cluster $ECS_CLUSTER_ID --services microservice-1-service --region us-east-2 --query "services[?status=='ACTIVE'].serviceName" --output text)
           if [ -z "$SERVICE_EXISTS" ]; then
@@ -236,6 +238,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-microservice-2
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+        
       - name: Print Working Directory
         run: pwd && ls -l
 
@@ -281,7 +286,6 @@ jobs:
           echo "ECS_CLUSTER_ID=$ECS_CLUSTER_ID" >> $GITHUB_ENV
 
       - name: Verify ECS Service
-        working-directory: ./fluxis
         run: |
           SERVICE_EXISTS=$(aws ecs describe-services --cluster $ECS_CLUSTER_ID --services microservice-2-service --region us-east-2 --query "services[?status=='ACTIVE'].serviceName" --output text)
           if [ -z "$SERVICE_EXISTS" ]; then
