--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -218,9 +218,11 @@ jobs:
           if [ -z "$TASK_DEFINITION" ]; then
             echo "Error: No task definition found for microservice-1."g a new one..."
             exit 1s register-task-definition --cli-input-json file://infrastructure/aws/ecs/ecs-task-definition-microservice-1.json --region us-east-2
-          fiTASK_DEFINITION=$(aws ecs list-task-definitions --family-prefix microservice-1 --region us-east-2 --query "taskDefinitionArns[-1]" --output text)
+          fi
+          TASK_DEFINITION=$(aws ecs list-task-definitions --family-prefix microservice-1 --region us-east-2 --query "taskDefinitionArns[-1]" --output text)
           echo "TASK_DEFINITION=$TASK_DEFINITION" >> $GITHUB_ENV
           echo "TASK_DEFINITION=$TASK_DEFINITION" >> $GITHUB_ENV
+
       - name: Verify ECS Service
         run: |
           SERVICE_EXISTS=$(aws ecs describe-services --cluster $ECS_CLUSTER_ID --services microservice-1-service --region us-east-2 --query "services[?status=='ACTIVE'].serviceName" --output text)
@@ -303,7 +305,7 @@ jobs:
             aws ecs register-task-definition --cli-input-json file://infrastructure/aws/ecs/ecs-task-definition-microservice-2.json --region us-east-2
             TASK_DEFINITION=$(aws ecs list-task-definitions --family-prefix microservice-2 --region us-east-2 --query "taskDefinitionArns[-1]" --output text)TASK_DEFINITION=$(aws ecs list-task-definitions --family-prefix microservice-2 --region us-east-2 --query "taskDefinitionArns[-1]" --output text)
           fi
-          echo "TASK_DEFINITION=$TASK_DEFINITION" >> $GITHUB_ENV          echo "TASK_DEFINITION=$TASK_DEFINITION" >> $GITHUB_ENV
+          echo "TASK_DEFINITION=$TASK_DEFINITION" >> $GITHUB_ENV         
 
       - name: Verify ECS ServiceVerify ECS Service
         run: |
