--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -29,7 +29,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: microservice-1-test-results
+          name: microservice-1-test-results-${{ github.run_id }}
           path: test-results-microservice-1.log
       - name: Set up AWS CLI
         uses: aws-actions/configure-aws-credentials@v2
@@ -68,7 +68,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: terraform-directory
+          name: terraform-directory-${{ github.run_id }}
           path: ./infrastructure/terraform
 
   build-microservice-2:
@@ -93,7 +93,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: microservice-2-test-results
+          name: microservice-2-test-results-${{ github.run_id }}
           path: test-results-microservice-2.log
       - name: Set up AWS CLI
         uses: aws-actions/configure-aws-credentials@v2
@@ -132,7 +132,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: terraform-directory
+          name: terraform-directory-${{ github.run_id }}
           path: ./infrastructure/terraform
 
   # CD Jobs
