--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -57,7 +57,7 @@ jobs:
       - name: Get Terraform Outputs
         id: tf-outputs
         run: |
-          ECR_URL_MICROSERVICE_1=$(terraform -chdir=./infrastructure/terraform output -raw microservice_1_ecr_url | tr -d '\n')
+          ECR_URL_MICROSERVICE_1=$(terraform -chdir=./infrastructure/terraform output -raw microservice_1_ecr_url | tr -d '\n' | tr -d ' ')
           echo "ECR_URL_MICROSERVICE_1=$ECR_URL_MICROSERVICE_1" >> $GITHUB_ENV
       - name: Build and Push Docker Image
         run: |
@@ -121,7 +121,7 @@ jobs:
       - name: Get Terraform Outputs
         id: tf-outputs
         run: |
-          ECR_URL_MICROSERVICE_2=$(terraform -chdir=./infrastructure/terraform output -raw microservice_2_ecr_url | tr -d '\n')
+          ECR_URL_MICROSERVICE_2=$(terraform -chdir=./infrastructure/terraform output -raw microservice_2_ecr_url | tr -d '\n' | tr -d ' ')
           echo "ECR_URL_MICROSERVICE_2=$ECR_URL_MICROSERVICE_2" >> $GITHUB_ENV
       - name: Build and Push Docker Image
         run: |
