--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,6 +2,10 @@ name: CD Pipeline
 
 on:
   workflow_call:
+    inputs:
+      environment:
+        required: true
+        type: string
 
 jobs:
   deploy-microservice-1:
@@ -26,7 +30,7 @@ jobs:
       - name: Deploy to ECS
         run: |
           aws ecs update-service --cluster $ECS_CLUSTER_ID \
-            --service ${{ env.ENVIRONMENT }}-microservice-1-service --force-new-deployment
+            --service ${{ inputs.environment }}-microservice-1-service --force-new-deployment
 
   deploy-microservice-2:
     name: Deploy Microservice 2
@@ -50,4 +54,4 @@ jobs:
       - name: Deploy to ECS
         run: |
           aws ecs update-service --cluster $ECS_CLUSTER_ID \
-            --service ${{ env.ENVIRONMENT }}-microservice-2-service --force-new-deployment
+            --service ${{ inputs.environment }}-microservice-2-service --force-new-deployment
