--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,10 @@ name: CI Pipeline
 
 on:
   workflow_call:
+    inputs:
+      environment:
+        required: true
+        type: string
 
 jobs:
   build-microservice-1:
@@ -51,7 +55,7 @@ jobs:
       - name: Get ECR Repository URL
         id: ecr-url
         run: |
-          ECR_URL_MICROSERVICE_1=$(aws ecr describe-repositories --repository-names ${{ env.ENVIRONMENT }}-microservice-1 --query 'repositories[0].repositoryUri' --output text)
+          ECR_URL_MICROSERVICE_1=$(aws ecr describe-repositories --repository-names ${{ inputs.environment }}-microservice-1 --query 'repositories[0].repositoryUri' --output text)
           echo "ECR_URL_MICROSERVICE_1=$ECR_URL_MICROSERVICE_1" >> $GITHUB_ENV
       - name: Get Git Commit Hash
         id: git-info
@@ -110,7 +114,7 @@ jobs:
       - name: Get ECR Repository URL
         id: ecr-url
         run: |
-          ECR_URL_MICROSERVICE_2=$(aws ecr describe-repositories --repository-names ${{ env.ENVIRONMENT }}-microservice-2 --query 'repositories[0].repositoryUri' --output text)
+          ECR_URL_MICROSERVICE_2=$(aws ecr describe-repositories --repository-names ${{ inputs.environment }}-microservice-2 --query 'repositories[0].repositoryUri' --output text)
           echo "ECR_URL_MICROSERVICE_2=$ECR_URL_MICROSERVICE_2" >> $GITHUB_ENV
       - name: Get Git Commit Hash
         id: git-info
