--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -7,26 +7,34 @@ on:
         required: true
         type: string
 
+# Common configuration that will be reused across jobs
+env:
+  AWS_REGION: us-east-2
+
 jobs:
+  # First microservice deployment
   deploy-microservice-1:
     name: Deploy Microservice 1
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        
       - name: Print Working Directory
         run: pwd && ls -l
+        
       - name: Set up AWS CLI
         uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-2
+          aws-region: ${{ env.AWS_REGION }}
+          
       - name: Fetch Shared ECS Cluster ID
         id: fetch-cluster-id
         run: |
           echo "Fetching ECS Cluster ID for environment: ${{ inputs.environment }}"
-          echo "Debug: Listing all ECS clusters in region us-east-2"
+          echo "Debug: Listing all ECS clusters in region ${{ env.AWS_REGION }}"
           aws ecs list-clusters --output json
           ECS_CLUSTER_ID=$(aws ecs list-clusters --query "clusterArns[?contains(@, '${{ inputs.environment }}')]" --output text)
           if [ -z "$ECS_CLUSTER_ID" ]; then
@@ -36,30 +44,35 @@ jobs:
           fi
           echo "ECS_CLUSTER_ID=$ECS_CLUSTER_ID" >> $GITHUB_ENV
           echo "ECS Cluster ID: $ECS_CLUSTER_ID"
+          
       - name: Deploy Microservice 1 to ECS
         run: |
           aws ecs update-service --cluster $ECS_CLUSTER_ID \
             --service ${{ inputs.environment }}-microservice-1-service --force-new-deployment
 
+  # Second microservice deployment
   deploy-microservice-2:
     name: Deploy Microservice 2
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        
       - name: Print Working Directory
         run: pwd && ls -l
+        
       - name: Set up AWS CLI
         uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-2
+          aws-region: ${{ env.AWS_REGION }}
+          
       - name: Fetch Shared ECS Cluster ID
         id: fetch-cluster-id
         run: |
           echo "Fetching ECS Cluster ID for environment: ${{ inputs.environment }}"
-          echo "Debug: Listing all ECS clusters in region us-east-2"
+          echo "Debug: Listing all ECS clusters in region ${{ env.AWS_REGION }}"
           aws ecs list-clusters --output json
           ECS_CLUSTER_ID=$(aws ecs list-clusters --query "clusterArns[?contains(@, '${{ inputs.environment }}')]" --output text)
           if [ -z "$ECS_CLUSTER_ID" ]; then
@@ -69,6 +82,7 @@ jobs:
           fi
           echo "ECS_CLUSTER_ID=$ECS_CLUSTER_ID" >> $GITHUB_ENV
           echo "ECS Cluster ID: $ECS_CLUSTER_ID"
+          
       - name: Deploy Microservice 2 to ECS
         run: |
           aws ecs update-service --cluster $ECS_CLUSTER_ID \
