--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,12 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'microservices/**'
+      - 'src/**'
+      - 'app/**'
+      - '!infrastructure/**'
+      - '!terraform/**'
 
 env:
   ENVIRONMENT: dev
